features: add disappearing messages (#21)